--- a/maven_test_progect/pom.xml
+++ b/maven_test_progect/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>checkstyle</artifactId>
       <version>8.37</version>
     </dependency>
+    <dependency>
+      <groupId>cobertura</groupId>
+      <artifactId>cobertura</artifactId>
+      <version>1.9rc1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -73,6 +78,17 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <formats>
+              <format>html</format>
+              <format>xml</format>
+            </formats>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
