--- a/maven_test_progect/pom.xml
+++ b/maven_test_progect/pom.xml
@@ -22,18 +22,24 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.7.0</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.puppycrawl.tools</groupId>
       <artifactId>checkstyle</artifactId>
-      <version>8.37</version>
+      <version>10.2</version>
     </dependency>
     <dependency>
       <groupId>cobertura</groupId>
       <artifactId>cobertura</artifactId>
       <version>1.9rc1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sourceforge.cobertura</groupId>
+      <artifactId>cobertura</artifactId>
+      <version>2.1.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
